--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
 asgiref==3.4.1
+autopep8==1.6.0
+beautifulsoup4==4.10.0
 certifi==2021.10.8
 cloudinary==1.26.0
+confusable-homoglyphs==3.2.0
 Django==3.2.9
+django-bootstrap4==21.1
+django-mathfilters==1.0.0
+django-registration==3.2
 djangorestframework==3.12.4
+Pillow==8.4.0
+psycopg2==2.9.1
+pycodestyle==2.8.0
 pytz==2021.3
 six==1.16.0
+soupsieve==2.3
 sqlparse==0.4.2
+toml==0.10.2
 urllib3==1.26.7
